--- a/Speculum Analytics Reports - Copper to Gold Ratio and Stock Market Relationship.ipynb
+++ b/Speculum Analytics Reports - Copper to Gold Ratio and Stock Market Relationship.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "This notebook accompanies the following blog post:\n"
+    "This notebook accompanies the following blog post:\n" https://medium.com/@kaganoezdemir97/can-the-ratio-of-copper-gold-futures-prices-be-used-to-forecast-the-stock-market-downturn-d11dd629adba
    ]
   },
   {
