--- a/Speculum Analytics Reports - Copper to Gold Ratio and Stock Market Relationship.ipynb
+++ b/Speculum Analytics Reports - Copper to Gold Ratio and Stock Market Relationship.ipynb
@@ -3,17 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "161751b3",
+   "id": "f8a6d02f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "This notebook accompanies the following blog post:\n" https://medium.com/@kaganoezdemir97/can-the-ratio-of-copper-gold-futures-prices-be-used-to-forecast-the-stock-market-downturn-d11dd629adba
+    "This notebook accompanies the following blog post:\n",
+    "https://medium.com/@kaganoezdemir97/can-the-ratio-of-copper-gold-futures-prices-be-used-to-forecast-the-stock-market-downturn-d11dd629adba"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "1cb5e956",
+   "id": "9542adc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 109,
-   "id": "f0c1dbb6",
+   "id": "c66566e4",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "4cf67c8c",
+   "id": "cc0bdd99",
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "83257beb",
+   "id": "9ff14009",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -958,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "115f44f8",
+   "id": "bd7779b1",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": 115,
-   "id": "5545e8c1",
+   "id": "1c84ae53",
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "09a83d9c",
+   "id": "dd4e366e",
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "id": "1640219b",
+   "id": "33c6ef22",
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "79f1ef7f",
+   "id": "c9f693e0",
    "metadata": {
     "scrolled": false
    },
@@ -1151,7 +1152,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "70076f0c",
+   "id": "106e5555",
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "b6acf1a2",
+   "id": "5779474d",
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "332442f4",
+   "id": "0d5eb1c4",
    "metadata": {
     "scrolled": false
    },
@@ -1342,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "b15f692c",
+   "id": "265c10b2",
    "metadata": {
     "scrolled": false
    },
@@ -2030,7 +2031,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "f80a5fd7",
+   "id": "dc149196",
    "metadata": {},
    "outputs": [
     {
@@ -2060,7 +2061,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "55c5d153",
+   "id": "daae318f",
    "metadata": {},
    "outputs": [
     {
@@ -2090,7 +2091,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "4ded4490",
+   "id": "11e79f56",
    "metadata": {},
    "outputs": [
     {
@@ -2111,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 281,
-   "id": "e0855c8a",
+   "id": "fd94b12c",
    "metadata": {
     "scrolled": false
    },
@@ -2163,7 +2164,7 @@
   {
    "cell_type": "code",
    "execution_count": 283,
-   "id": "83a4d95f",
+   "id": "510131b2",
    "metadata": {},
    "outputs": [
     {
@@ -2206,7 +2207,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d228c574",
+   "id": "798cced2",
    "metadata": {},
    "outputs": [],
    "source": []
